--- a/public/admin.html
+++ b/public/admin.html
@@ -184,7 +184,7 @@
                 </div>
                 <div class="admin-icon-button" data-view="view-admin-pending-actions">
                     <div class="icon-wrapper"><i class="fa-solid fa-user-check"></i></div>
-                    <span>К действию</span>
+                    <span>Выдача промокодов и предметов</span>
                 </div>
                 <div class="admin-icon-button" data-view="view-admin-settings">
                     <div class="icon-wrapper"><i class="fa-solid fa-sliders"></i></div>
