--- a/public/events.html
+++ b/public/events.html
@@ -541,6 +541,14 @@
             dom.eventsContainer.innerHTML = '';
             const isEditMode = document.body.classList.contains('edit-mode');
 
+            if (pageContent.events && pageContent.events.length === 1) {
+                dom.eventsContainer.style.display = 'flex';
+                dom.eventsContainer.style.justifyContent = 'center';
+            } else {
+                dom.eventsContainer.style.display = '';
+                dom.eventsContainer.style.justifyContent = '';
+            }
+
             let userActiveParticipationId = null;
             if (userData && userData.event_participations) {
                 const userEventIds = Object.keys(userData.event_participations);
