--- a/public/admin.html
+++ b/public/admin.html
@@ -733,73 +733,65 @@
 
         // --- ОСНОВНЫЕ ФУНКЦИИ ---
 
-        function renderPendingActions(actions) {
+        function renderSubmissions(submissions) {
             dom.tabContentSubmissions.innerHTML = '';
-            dom.tabContentCheckpointPrizes.innerHTML = '';
-            
-            const submissions = actions.filter(a => a.type === 'submission');
-            
-            // --- НАЧАЛО ИСПРАВЛЕНИЯ ---
-            // Фильтруем награды Чекпоинта, проверяя поле source_description
-            const checkpointPrizes = actions.filter(a => a.type === 'prize' && a.source_description && a.source_description.toLowerCase().includes('чекпоинт'));
-            // --- КОНЕЦ ИСПРАВЛЕНИЯ ---
-
-
-            const createCardHtml = (action) => {
-                if (action.type === 'submission') {
-                    // ... (код для карточки 'submission' остается без изменений) ...
-                    let submissionContent = '';
-                    const data = action.submitted_data || '';
-                    const isUrl = data.startsWith('http://') || data.startsWith('https://');
-                    if (isUrl) {
-                        submissionContent = `<a href="${data}" target="_blank" rel="noopener noreferrer" style="color: var(--action-color); text-decoration: underline; word-break: break-all;">${data}</a>`;
-                    } else {
-                        submissionContent = `<span>${data}</span>`;
-                    }
-                    const actionLinkHtml = (action.quest_action_url && action.quest_action_url !== "")
-                        ? `<a href="${action.quest_action_url}" target="_blank" rel="noopener noreferrer" class="action-link-btn">Перейти</a>`
-                        : '';
-                    return `
-                    <div class="quest-card admin-submission-card" id="submission-card-${action.id}">
-                        <h3 class="quest-title">${action.title || 'Ручное задание'}</h3>
-                        <p style="font-size: 14px; color: var(--text-color-muted); line-height: 1.4; margin: 4px 0 12px;">${action.quest_description || 'Описание отсутствует.'}</p>
-                        <p style="font-size: 13px; font-weight: 500; margin-bottom: 12px;">Награда: ${action.reward_amount || '?'} ⭐</p>
-                        <p>Пользователь: <strong>${action.user_full_name || 'Неизвестный'}</strong></p>
-                        <p style="margin-top: 10px; margin-bottom: 5px; font-weight: 600; font-size: 13px;">Данные для проверки:</p>
-                        <div class="submission-wrapper">
-                            <div class="submission-data">${submissionContent}</div>
-                            ${actionLinkHtml}
-                        </div>
-                        <div class="submission-actions">
-                            <button class="admin-action-btn approve" data-id="${action.id}" data-action="approved">Одобрить</button>
-                            <button class="admin-action-btn reject" data-id="${action.id}" data-action="rejected">Отклонить</button>
-                        </div>
-                    </div>`;
-
-                } else if (action.type === 'prize') { // Карточка для Чекпоинта и других ручных наград
-                    return `
-                    <div class="quest-card admin-submission-card" id="prize-card-${action.id}">
-                        <h3 class="quest-title">${action.source_description || 'Выдача награды'}</h3>
-                        <p><b>Приз:</b> ${action.reward_details || 'Не указан'}</p>
-                        <p>Пользователь: <strong>${action.user_full_name || 'Неизвестный'}</strong></p>
-                        ${action.user_trade_link ? `<p>Ссылка: <a href="${action.user_trade_link}" target="_blank" style="color: var(--action-color);">Проверить трейд-ссылку</a></p>` : '<p style="color:var(--warning-color);">Трейд-ссылка не указана!</p>'}
-                        <div class="submission-actions">
-                            <button class="admin-action-btn confirm" data-id="${action.id}" data-action="confirm_prize">✅ Подтвердить выдачу</button>
-                        </div>
-                    </div>`;
-                }
-                return '';
-            };
+            if (!submissions || submissions.length === 0) {
+                dom.tabContentSubmissions.innerHTML = '<p style="text-align: center; color: var(--text-color-muted);">Нет заданий на проверку.</p>';
+                return;
+            }
 
             submissions.forEach(action => {
-                dom.tabContentSubmissions.innerHTML += createCardHtml(action);
+                let submissionContent = '';
+                const data = action.submitted_data || '';
+                const isUrl = data.startsWith('http://') || data.startsWith('https://');
+                if (isUrl) {
+                    submissionContent = `<a href="${data}" target="_blank" rel="noopener noreferrer" style="color: var(--action-color); text-decoration: underline; word-break: break-all;">${data}</a>`;
+                } else {
+                    submissionContent = `<span>${data}</span>`;
+                }
+                const actionLinkHtml = (action.quest_action_url && action.quest_action_url !== "")
+                    ? `<a href="${action.quest_action_url}" target="_blank" rel="noopener noreferrer" class="action-link-btn">Перейти</a>`
+                    : '';
+                const cardHtml = `
+                <div class="quest-card admin-submission-card" id="submission-card-${action.id}">
+                    <h3 class="quest-title">${action.title || 'Ручное задание'}</h3>
+                    <p style="font-size: 14px; color: var(--text-color-muted); line-height: 1.4; margin: 4px 0 12px;">${action.quest_description || 'Описание отсутствует.'}</p>
+                    <p style="font-size: 13px; font-weight: 500; margin-bottom: 12px;">Награда: ${action.reward_amount || '?'} ⭐</p>
+                    <p>Пользователь: <strong>${action.user_full_name || 'Неизвестный'}</strong></p>
+                    <p style="margin-top: 10px; margin-bottom: 5px; font-weight: 600; font-size: 13px;">Данные для проверки:</p>
+                    <div class="submission-wrapper">
+                        <div class="submission-data">${submissionContent}</div>
+                        ${actionLinkHtml}
+                    </div>
+                    <div class="submission-actions">
+                        <button class="admin-action-btn approve" data-id="${action.id}" data-action="approved">Одобрить</button>
+                        <button class="admin-action-btn reject" data-id="${action.id}" data-action="rejected">Отклонить</button>
+                    </div>
+                </div>`;
+                dom.tabContentSubmissions.innerHTML += cardHtml;
             });
-            checkpointPrizes.forEach(action => {
-                dom.tabContentCheckpointPrizes.innerHTML += createCardHtml(action);
-            });
+        }
 
-            if (dom.tabContentSubmissions.innerHTML === '') dom.tabContentSubmissions.innerHTML = '<p style="text-align: center; color: var(--text-color-muted);">Нет заданий на проверку.</p>';
-            if (dom.tabContentCheckpointPrizes.innerHTML === '') dom.tabContentCheckpointPrizes.innerHTML = '<p style="text-align: center; color: var(--text-color-muted);">Нет наград из Чекпоинта.</p>';
+        function renderCheckpointPrizes(prizes) {
+            dom.tabContentCheckpointPrizes.innerHTML = '';
+            if (!prizes || prizes.length === 0) {
+                dom.tabContentCheckpointPrizes.innerHTML = '<p style="text-align: center; color: var(--text-color-muted);">Нет наград из Чекпоинта.</p>';
+                return;
+            }
+
+            prizes.forEach(action => {
+                const cardHtml = `
+                <div class="quest-card admin-submission-card" id="prize-card-${action.id}">
+                    <h3 class="quest-title">${action.source_description || 'Выдача награды'}</h3>
+                    <p><b>Приз:</b> ${action.reward_details || 'Не указан'}</p>
+                    <p>Пользователь: <strong>${action.user_full_name || 'Неизвестный'}</strong></p>
+                    ${action.user_trade_link ? `<p>Ссылка: <a href="${action.user_trade_link}" target="_blank" style="color: var(--action-color);">Проверить трейд-ссылку</a></p>` : '<p style="color:var(--warning-color);">Трейд-ссылка не указана!</p>'}
+                    <div class="submission-actions">
+                        <button class="admin-action-btn confirm" data-id="${action.id}" data-action="confirm_prize">✅ Подтвердить выдачу</button>
+                    </div>
+                </div>`;
+                dom.tabContentCheckpointPrizes.innerHTML += cardHtml;
+            });
         }
 
         // ... (остальной JS код остается без изменений) ...
