--- a/public/menu.html
+++ b/public/menu.html
@@ -1062,6 +1062,9 @@
             }
             
             try {
+                // ШАГ 1: Запускаем загрузку контента меню в фоне (это мы пропустили)
+                const menuContentPromise = fetch("/api/v1/content/menu").then(res => res.json());
+
                 const day = new Date().getDay();
                 const questButton = dom.questChooseBtn;
                 if (day === 0 || day === 1) { 
@@ -1097,26 +1100,24 @@
 
                 document.getElementById('ticketStats').textContent = userData.tickets || 0;
 
-            // ↓↓↓ ВОТ ВАШ КОД, КОТОРЫЙ НУЖНО ВСТАВИТЬ ↓↓↓
-            const menuContent = await menuContentPromise;
-            if (menuContent) {
-                if (menuContent.menu_banner_url) {
-                    const bannerImg = document.getElementById('menu-banner-img');
-                    if (bannerImg) {
-                        bannerImg.src = menuContent.menu_banner_url;
+                // ШАГ 2: Дожидаемся загрузки контента меню и обновляем баннеры
+                const menuContent = await menuContentPromise;
+                if (menuContent) {
+                    if (menuContent.menu_banner_url) {
+                        const bannerImg = document.getElementById('menu-banner-img');
+                        if (bannerImg) {
+                            bannerImg.src = menuContent.menu_banner_url;
+                        }
+                    }
+                    if (menuContent.checkpoint_banner_url) {
+                        const checkpointBannerImg = document.getElementById('checkpoint-banner-img');
+                        if (checkpointBannerImg) {
+                            checkpointBannerImg.src = menuContent.checkpoint_banner_url;
+                        }
                     }
                 }
-                if (menuContent.checkpoint_banner_url) {
-                    const checkpointBannerImg = document.getElementById('checkpoint-banner-img');
-                    if (checkpointBannerImg) {
-                        checkpointBannerImg.src = menuContent.checkpoint_banner_url;
-                    }
-                }
-            }
-            // ↑↑↑ КОНЕЦ ВСТАВКИ ↑↑↑
-
-            const questsDataResp = await makeApiRequest("/api/v1/quests/list");
   
+                // ШАГ 3: Загружаем квесты (УБРАНА ДУБЛИРУЮЩАЯСЯ СТРОКА)
                 const questsDataResp = await makeApiRequest("/api/v1/quests/list");
 
                 allQuests = questsDataResp || [];
@@ -1136,7 +1137,6 @@
                 }
 
                 console.log("4. Собираемся вызывать renderChallenge. Передаём в неё:", challengeData);
-                // ✅ ФИНАЛЬНОЕ ИСПРАВЛЕНИЕ: Передаём информацию о кулдауне, даже если челлендж null
                 if (challengeData) {
                     renderChallenge(challengeData, !userData.twitch_id);
                 } else {
