--- a/public/admin.html
+++ b/public/admin.html
@@ -138,6 +138,7 @@
         border-radius: 12px;
         padding: 15px;
         text-align: center;
+        position: relative; /* <-- ДОБАВЛЕНА ЭТА СТРОКА */
     }
     .stat-card-header {
         display: flex;
@@ -191,28 +192,29 @@
     }
 .tooltip .tooltip-text {
     visibility: hidden;
-    width: 240px; /* Немного увеличим ширину для комфорта */
+    width: 240px;
+    max-width: calc(100% - 16px); /* Не шире, чем сама карточка */
     background-color: #222;
     color: #fff;
-    text-align: left;
-    border-radius: 8px; /* Сделаем чуть более скруглённым */
+    text-align: center; /* Центрируем текст для красоты */
+    border-radius: 8px;
     padding: 10px;
     position: absolute;
-    z-index: 1;
-
-    /* --- НОВЫЕ ПРАВИЛА ПОЗИЦИОНИРОВАНИЯ --- */
-    bottom: 100%; /* Всегда появляться над иконкой */
-    left: 50%; /* Начинаем с центра иконки */
-    transform: translateX(-95%); /* Смещаем влево почти на всю свою ширину */
-    margin-bottom: 8px;
+    z-index: 10;
+    
+    /* --- НОВАЯ УНИВЕРСАЛЬНАЯ ЛОГИКА ПОЗИЦИОНИРОВАНИЯ --- */
+    bottom: 100%; 
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 10px; /* Отступ от иконки */
 
     opacity: 0;
     transition: opacity 0.3s;
-    font-size: 13px; /* Чуть крупнее для читаемости */
+    font-size: 13px;
     font-weight: 400;
     line-height: 1.5;
     box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-    pointer-events: none; /* Предотвращает "мигание" подсказки */
+    pointer-events: none;
 }
     .tooltip:hover .tooltip-text {
         visibility: visible;
