--- a/public/menu.html
+++ b/public/menu.html
@@ -407,7 +407,7 @@
     <a href="/leaderboard" id="nav-leaderboard" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div><span>Лидерборд</span></a>
     <a href="#" id="nav-dashboard" class="footer-item active"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>Главная</span></a>
     <a href="#" id="nav-quests" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div><span>Задания</span></a>    
-    <a href="/events" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>Ивенты</span></a>    
+    <a href="/events" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>Розыгрыши</span></a>    
     <a href="/admin" id="nav-admin" class="footer-item hidden"><div class="icon-wrapper"><i class="fa-solid fa-user-shield"></i></div><span>Админка</span></a>
   </footer>
   
