--- a/public/menu.html
+++ b/public/menu.html
@@ -23,8 +23,8 @@
       --telegram-color: #0088CC;
     }
     body { margin: 0; min-height: 100vh; background-color: var(--bg-color); background-image: var(--bg-gradient); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; }
-    /* ИЗМЕНЕНО: Уменьшен верхний отступ */
-    .main-content { flex-grow: 1; padding: 15px 15px 120px; overflow-y: auto; opacity: 0; transition: opacity 0.4s ease-in-out; }
+    /* ИСПРАВЛЕНО: Уменьшен верхний отступ */
+    .main-content { flex-grow: 1; padding: 10px 15px 120px; overflow-y: auto; opacity: 0; transition: opacity 0.4s ease-in-out; }
     .main-content.visible { opacity: 1; }
     .user-profile { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
     .user-info { display: flex; flex-direction: column; }
@@ -253,10 +253,10 @@
         position: relative;
         z-index: 1000;
         border-radius: 12px;
-        box-shadow: 0 0 0 4px var(--primary-color), 0 0 25px var(--primary-color);
+        /* ИСПРАВЛЕНО: Уменьшена тень для обводки */
+        box-shadow: 0 0 0 3px var(--primary-color), 0 0 15px var(--primary-color);
         transition: box-shadow 0.3s ease-in-out;
     }
-    /* НОВЫЙ КЛАСС: Делает футер видимым во время обучения его элементов */
     .app-footer.tutorial-footer-active {
         z-index: 1000;
     }
@@ -316,10 +316,10 @@
         color: white;
         font-size: 14px;
     }
-    /* ИЗМЕНЕНО: Уменьшен отступ */
+    /* ИСПРАВЛЕНО: Уменьшен отступ */
     .start-tutorial-btn-wrapper {
         text-align: center;
-        margin-bottom: 8px;
+        margin-bottom: 12px;
     }
     #start-tutorial-btn {
         background-color: rgba(0, 122, 255, 0.15);
@@ -522,7 +522,6 @@
         let userData = {};
         let questsForRoulette = [];
         
-        // --- ЛОГИКА ОБУЧЕНИЯ ---
         const tutorialSteps = [
             {
                 element: '.user-profile',
@@ -555,14 +554,14 @@
                 view: 'view-dashboard'
             },
             {
-                // ИЗМЕНЕНО: Теперь подсвечиваем конкретную иконку
-                element: '#nav-leaderboard',
+                // ИСПРАВЛЕНО: Цель - внутренняя иконка
+                element: '#nav-leaderboard .icon-wrapper',
                 title: 'Лидерборд',
                 text: 'Следите за статистикой самых активных пользователей в Twitch и Telegram чатах. Нужная кнопка находится в панели снизу.'
             },
             {
-                // ИЗМЕНЕНО: Теперь подсвечиваем конкретную иконку
-                element: '#nav-quests',
+                // ИСПРАВЛЕНО: Цель - внутренняя иконка
+                element: '#nav-quests .icon-wrapper',
                 title: 'Задания',
                 text: 'В этом разделе находятся задания с ручной проверкой. Найдите иконку в панели снизу, чтобы посмотреть их.'
             }
@@ -577,8 +576,9 @@
             modal.style.right = '5%';
             modal.style.width = '90%';
 
-            if (rect.bottom + modal.offsetHeight + 20 > window.innerHeight) {
-                modal.style.top = `${rect.top - modal.offsetHeight - 15}px`;
+            // ИСПРАВЛЕНО: Модальное окно всегда появляется НАД элементом, если он в нижней половине экрана
+            if (rect.top > window.innerHeight / 2) {
+                 modal.style.top = `${rect.top - modal.offsetHeight - 15}px`;
             } else {
                 modal.style.top = `${rect.bottom + 15}px`;
             }
@@ -596,7 +596,6 @@
 
             const step = tutorialSteps[stepIndex];
 
-            // ИСПРАВЛЕНО: Логика переключения вкладок
             if (step.view && document.getElementById(step.view).classList.contains('hidden')) {
                 switchView(step.view);
             }
@@ -604,7 +603,6 @@
             const element = document.querySelector(step.element);
 
             if (element) {
-                 // ИСПРАВЛЕНО: Логика для подсветки футера
                 if (element.closest('.app-footer')) {
                     footer.classList.add('tutorial-footer-active');
                 }
@@ -624,9 +622,12 @@
                     dom.tutorialNextBtn.textContent = 'Далее';
                 }
             } else {
-                console.warn(`Tutorial element not found: ${step.element}. Skipping step.`);
-                currentTutorialStep++;
-                showTutorialStep(currentTutorialStep);
+                console.warn(`Tutorial element not found: ${step.element}. Trying next step.`);
+                // ИСПРАВЛЕНО: Предотвращение бесконечной рекурсии
+                setTimeout(() => {
+                    currentTutorialStep++;
+                    showTutorialStep(currentTutorialStep);
+                }, 100);
             }
         }
 
@@ -1314,8 +1315,8 @@
 
         async function main() {
             try {
-                // ИСПРАВЛЕНО: Прокрутка в самый верх при каждой загрузке
-                window.scrollTo(0, 0);
+                // ИСПРАВЛЕНО: Гарантированная прокрутка в самый верх
+                setTimeout(() => window.scrollTo(0, 0), 0);
 
                 if (!Telegram.WebApp.initData) {
                     document.body.innerHTML = `<div style="text-align:center; padding:20px;"><h1>Ошибка</h1><p>Запустите приложение из Telegram.</p></div>`;
@@ -1396,7 +1397,7 @@
                     renderChallenge({ cooldown_until: userData.challenge_cooldown_until }, !userData.twitch_id);
                 }
 
-                // ИСПРАВЛЕНО: Запуск обучения перенесен в конец, после полной отрисовки
+                // ИСПРАВЛЕНО: Запуск обучения перенесен в самый конец
                 if (!localStorage.getItem('tutorialCompleted')) {
                     startTutorial();
                 }
