--- a/public/menu.html
+++ b/public/menu.html
@@ -531,7 +531,7 @@
                 element: '.user-profile',
                 title: 'Ваш Профиль и Билеты',
                 // ИСПРАВЛЕНО: Обновлен текст обучения по вашему запросу
-                text: 'Слева находится <b>Ваш профиль</b>. Там можно привязать Twitch и указать трейд-ссылку. <br><br>Справа — <b>Ваши билеты</b>, которые вы зарабатываете за задания и используете в "Гонке за скинами".',
+                text: 'Слева находится <b>Ваш профиль</b>. Там можно привязать Twitch и указать трейд-ссылку для наград и посмотреть все полученные промокоды. <br><br>Справа — <b>Ваши билеты</b>, которые вы зарабатываете за задания и используете в "Гонке за скинами".',
                 view: 'view-dashboard'
             },
             {
