--- a/public/menu.html
+++ b/public/menu.html
@@ -531,13 +531,13 @@
                 element: '.user-profile',
                 title: 'Ваш Профиль и Билеты',
                 // Обновлен текст обучения по вашему запросу
-                text: 'Слева находится <b>Ваш профиль</b>. Там можно привязать Twitch и указать трейд-ссылку. <br><br>Справа — <b>Ваши билеты</b>, которые вы зарабатываете за задания и используете в "Гонке за скинами".',
+                text: 'Слева находится <b>Ваш профиль</b>. Там можно привязать Twitch,указать трейд-ссылку и посмотреть все полученные промокоды. <br><br>Справа — <b>Ваши билеты</b>, которые вы зарабатываете за задания и используете в "Гонке за скинами".',
                 view: 'view-dashboard'
             },
             {
                 element: '#events-link-wrapper',
                 title: 'Гонка за скинами',
-                text: 'Это главный розыгрыш. Участвуйте, используя бесплатные билеты, которые можно заработать за выполнение заданий.',
+                text: 'Участвуйте, используя бесплатные билеты, которые можно заработать за выполнение заданий.',
                 view: 'view-dashboard'
             },
             {
